# CodeRetrX

./: .env  .env.example  .gitignore  .gitmodules  LICENSE  README.md  STRATEGIES.md  USAGE.md  bug_finder.py  docker-compose.qdrant.yml  justfile  pyproject.toml
bench/: EXPERIMENTS.md  NeonDatabase_Analysis_By_Bug_Type.md  Ollama_Analysis_by_Bug_Type.md  Rosenpass_Analysis_By_Bug_Type.md  dataset_PQAlgo.json  dataset_vuln.json  queries.json  queries_PQAlgo.json  queries_refactor.json  queries_vuln.json  repos.txt
codelib/: __init__.py
codelib/impl/default/: factory.py  prompt.py  smart_codebase.py  topic_extractor.py
codelib/retrieval/: __init__.py  code_recall.py  smart_codebase.py  strategies.py  topic_extractor.py
codelib/static/codebase/: __init__.py  codebase.py  languages.py  models.py
codelib/static/codebase/queries/fine_imports/: csharp.scm  elixir.scm  go.scm  java.scm  javascript.scm  (+2 more)
codelib/static/ripgrep/: __init__.py  ripgrep.py
codelib/utils/: _extras.py  bench_repos.py  concurrency.py  cost_tracking.py  embedding.py  git.py  jsonparser.py  llm.py  logger.py  stats.py
coderetrx/impl/default/: __init__.py  factory.py  prompt.py  smart_codebase.py  topic_extractor.py
coderetrx/retrieval/: __init__.py  code_recall.py  factory.py  smart_codebase.py  strategies.py  topic_extractor.py
coderetrx/retrieval/strategy/: __init__.py  adaptive_filter_keyword_by_vector_and_llm.py  adaptive_filter_symbol_by_vector_and_llm.py  adaptive_filter_symbol_content_by_vector_and_llm.py  base.py  factory.py  filter_dependency_by_llm.py  filter_filename_by_llm.py  filter_imports_by_vector_and_llm.py  filter_keyword_by_vector.py  filter_keyword_by_vector_and_llm.py  filter_line_per_file_by_vector_and_llm.py  filter_line_per_symbol_by_vector_and_llm.py  filter_symbol_by_llm.py  filter_symbol_by_vector.py  filter_symbol_by_vector_and_llm.py  filter_symbol_content_by_vector.py  filter_symbol_content_by_vector_and_llm.py  filter_symbol_name_by_llm.py  filter_topk_line_by_vector_and_llm.py
coderetrx/static/: __init__.py
coderetrx/static/codebase/: __init__.py  codebase.py  languages.py  models.py
coderetrx/static/codebase/parsers/: __init__.py  base.py  factory.py  treesitter.py
coderetrx/static/codeql/: codeql.py  installer.py
coderetrx/static/ripgrep/: __init__.py  installer.py  ripgrep.py
coderetrx/tools/: __init__.py  base.py  codeql_learning.py  codeql_query.py  find_file_by_name.py  find_references.py  keyword_search.py  list_dir.py  llm_filter.py  llm_mapping.py  mcp_server.py  settings.py  view_file.py
coderetrx/tools/lsp/: __init__.py  base.py  constants.py  get_definition.py  get_references.py  list_symbol.py
coderetrx/utils/: _extras.py  bench_repos.py  checkpoint_manager.py  cost_tracking.py  embedding.py  git.py  llm.py  llm_cache.py  logger.py  path.py  similarity_searcher.py  stats.py
docs/: API_REFERENCE.md  DEVELOPMENT.md  EXAMPLES.md
features/: features.json
scripts/: analyze_bug_reports.py  analyze_code_reports.py  batch_run.py  benchmark.py  bug_finder.py  bug_hunter_demo.py  chunk_id_to_lines.py  code_report_to_dataset.py  code_retriever.py  example.py  popular_topics_analyzer.py  try_codelines.py  view_chunks.py
test/impl/default/: test_adaptive_strategy.py  test_code_recall.py  test_determine_strategy.py  test_function_call.py  test_smart_codebase.py
test/scripts/: test_bug_hunter_demo.py
test/static/codebase/: test_lsp_parser.py  test_parser_integration.py  test_variable_extraction.py
test/tools/: test_tools.py
test/tools/lsp/: __init__.py  manual_test.py  test_integration.py  test_lsp_tools.py
(+40 files in other folders)
