[project]
name = "codelib"
version = "0.1.12"
description = "Library for Code Analysis via Static Analysis and LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "git-python>=1.0.3",
    "httpx>=0.28.1",
    "ignore-python>=0.2.0",
    "json-repair>=0.46.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-git>=2018.2.1",
    "tiktoken>=0.9.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.7.3",
]

[dependency-groups]
dev = ["ipython>=9.2.0", "rich>=14.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"codelib" = ["**/*.scm"]
